--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <input type="checkbox" onclick="hide()" class="hideCheks">
   <span class="slider round"></span>
   <div class="span_animation">
-  <span class="text_switch">Hide </span>
+  <span class="text_switch">Hidden</span>
   </div>
 </label>
   </div>
