--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<title>tdhgfrhrftgh</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="index.js"></script>
+	
+	<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	
 </head>
 <body>
 <div class="conteiner-proggres-bar">
