--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>tdhgfrhrftgh</title>
+	<title>Progress Bar</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="index.js"></script>
 	
